# mobile-money-platform

momo/: .env  README.md  pubspec.yaml
momo-ms/: Cargo.toml  build.rs
momo-ms/src/: auth.rs  main.rs  money_transfer.rs
momo-ms/src/api/: auth.rs  common.rs  mod.rs  money_transfer.rs  response.rs
momo-ms/src/db/: config.rs
momo-ms/src/model/: bank.rs  mod.rs  offer.rs  sms.rs  transaction.rs  user.rs  wallet.rs
momo-ms/src/utils/: constants.rs  generators.rs  mod.rs
momo/android/app/: build.gradle
momo/android/app/src/debug/: AndroidManifest.xml
momo/android/app/src/main/: AndroidManifest.xml
momo/ios/Runner/: Info.plist
momo/ios/Runner.xcodeproj/: project.pbxproj
momo/lib/: main.dart
momo/lib/core/: app.dart  constants.dart  extensions.dart  injector.dart  modals.dart  theme.dart  user.session.dart  validator.dart
momo/lib/core/router/: route.dart  route.gr.dart
momo/lib/features/auth/data/repositories/: auth.dart
momo/lib/features/auth/domain/repositories/: auth.dart
momo/lib/features/auth/presentation/manager/: auth_cubit.dart
momo/lib/features/auth/presentation/pages/: login.dart  user.setup.dart  verify.pin.dart
momo/lib/features/shared/data/repositories/: common.dart  (+1 more)
momo/linux/: CMakeLists.txt  my_application.cc
momo/macos/Flutter/: GeneratedPluginRegistrant.swift
momo/macos/Runner.xcodeproj/: project.pbxproj
momo/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
momo/macos/Runner/Configs/: AppInfo.xcconfig
momo/web/: index.html
momo/windows/: CMakeLists.txt
momo/windows/runner/: Runner.rc  main.cpp
(+40 files in other folders)
