[package]
name = "momo-ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.9.3"
log = "0.4.17"
mongodb = "2.3.1"
serde = { version = "1.0.147", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
tokio = "1.21.2"
tokio-stream = "0.1.11"
uuid = { version = "1.2.2", features = ["v4"] }
